test/Tests/Components/IntWidth.golden

test\Tests\Components\IntWidth.hs:31:12: error:
    * Incompatible scalars within Location 0:
        - V 2 Word32 with Location 0, Component 0 requires Word32,
        - Word64 with Location 0, Component 2 requires Word64.
    * In the second argument of `($)', namely
        `entryPoint
           @"main"
           @Vertex
           do ~(Vec2 x y) <- get @"in_col1"
              z <- get @"in_col2"
              put @"out_col" (Vec4 x y (convert z) 1)'
      In the expression:
        Module
          $ entryPoint
              @"main"
              @Vertex
              do ~(Vec2 x y) <- get @"in_col1"
                 z <- get @"in_col2"
                 put @"out_col" (Vec4 x y (convert z) 1)
      In an equation for `program':
          program
            = Module
                $ entryPoint
                    @"main"
                    @Vertex
                    do ~(Vec2 x y) <- get @"in_col1"
                       z <- get @"in_col2"
                       put @"out_col" (Vec4 x y (convert z) 1)
   |
31 |   Module $ entryPoint @"main" @Vertex do
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
